[package]
name = "grpc-utils"
version = "0.1.0"
authors = ["sutr-app"]
edition = "2024"

[features]
default = []

[dependencies]
anyhow = "1.0"
axum = { version = "0.8" }
command-utils = { git = "https://github.com/sutr-app/command-utils.git", branch = "main" }
futures = "0.3"
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
tonic-reflection = { version = "0.14" }
tonic-web = { version = "0.14" }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
    "json",
] }
